update ver 2 textbox

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="calculator">
-        <input id="display" readonly>
+        <textarea id="display" readonly></textarea>
         
         <div id="keys">
             <div>
